<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >

  <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLeaveRemainingDescription"
                android:stretchColumns="0,1"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewRemaining"
                        android:text="@string/remaining"  
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

 				<TextView
 				    android:id="@+id/textViewWrong"
 				    android:text="@string/wrongAnswers"  
 				    android:textAppearance="?android:attr/textAppearanceMedium"/>

 				<TextView
 				    android:id="@+id/textViewTime"
 				    android:text="@string/timeRemaning" 
 				    android:textAppearance="?android:attr/textAppearanceMedium" />

                </TableRow>

              
</TableLayout>

  <ListView
      android:id="@+id/questionLw"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1" />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <Button
        android:id="@+id/respondLater"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/answerLater"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/sendAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sendAnswer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

  </LinearLayout>

</LinearLayout>